# rig-for-red

./: .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  Dockerfile.test  README.md  cog.toml  hacs.json  prek.toml  pyproject.toml  release-please-config.json  requirements_test.txt  setup.cfg
.claude/: settings.local.json
.devcontainer/: Dockerfile  devcontainer.json
.github/: CODEOWNERS  FUNDING.yml  labeler.yml  release-drafter.yml  renovate.json  renovate.json.old
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: conventional-commits.yml  hassfest.yml  labeler.yml  pre-commit.yml  prek.yml  pytest.yaml  release-drafter.yml  release-please.yml  renovate.yml  stale.yml  tests.yml  update-test-matrix.yaml  validate.yml
.serena/: project.yml
backlog/: config.yml
backlog/decisions/: decision-1 - ADR-001-Coordinator-Pattern-als-zentrale-Orchestrierung.md  decision-2 - ADR-002-Gestufte-Dimmung-statt-einzelner-langer-Transition.md  decision-3 - ADR-003-HA-Event-Helpers-—-kein-APScheduler.md  decision-4 - ADR-004-Adaptive-Lighting-ist-vollständig-optional.md  decision-5 - ADR-005-Test-Strategie-mit-pytest-homeassistant-custom-component.md
backlog/docs/: doc-1 - Reference-Links.md  doc-3 - Testing-Strategy.md
backlog/tasks/: task-1 - Projektstruktur-anlegen.md  task-10 - coordinator.py-—-async_activate-Licht-auf-Rot.md  task-11 - coordinator.py-—-_dim_lights-Hintergrundtask.md  task-12 - coordinator.py-—-async_restore.md  task-13 - coordinator.py-—-Sonnenaufgang-Restore-Scheduling.md  task-14 - coordinator.py-—-Fixer-Restore-Zeitpunkt.md  task-15 - switch.py-implementieren.md  task-16 - Custom-Services-registrieren.md  task-17 - tests-conftest.py-—-Test-Fixtures.md  (+46 more)
docs/: ADR-001-architecture.md  ADR-002-testing-strategy.md  reference-links.md
scripts/: develop  lint  setup-dependencies  setup-devcontainer  setup-symlinks  update-test-matrix.py
tests/: conftest.py  test_config_flow.py  test_coordinator.py  test_init.py  test_switch.py
(+48 files in other folders)
